# astrodynamics

./: Cargo.toml  README.md  build.rs
src/: constants.rs  lib.rs  state.rs  time.rs
src/events/: mod.rs  trait.rs
src/forces/: composite.rs  j2.rs  mod.rs  trait.rs  two_body.rs
src/integrators/: dp54.rs  mod.rs  rk4.rs  tableau.rs
src/math/: mat3.rs  mod.rs  vec3.rs
src/propagator/: api.rs  controller.rs  dense_output.rs  dynamics.rs  mod.rs  result.rs
src/sgp4/: mod.rs  vallado.rs
tests/: dense_output.rs  kepler_oracle.rs  sgp4_diagnostic.rs  sgp4_json_origin.rs  sgp4_oracle_diff.rs  sgp4_regenerate_fixture.rs  sgp4_vallado_oracle.rs
tests/cpp/: sgp4_dump_wrapper.cpp
