[package]
name = "astrodynamics"
version = "0.6.2"
authors = []
edition = "2021"
description = "Numerical astrodynamics engine for orbit propagation, force models, and flight-dynamics primitives"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/astrodynamics"
homepage = "https://github.com/neilberkman/astrodynamics"
repository = "https://github.com/neilberkman/astrodynamics"
keywords = ["astrodynamics", "orbital-mechanics", "satellite", "propagation"]
categories = ["science", "simulation"]

# Dev-only oracle infrastructure (Vallado C++ source + gated test files)
# is excluded from the published tarball. Power users who want to run the
# C++ field-diff oracle should clone the git repo, where these files live.
exclude = [
    "tests/cpp/**",
    "tests/sgp4_diagnostic.rs",
    "tests/sgp4_oracle_diff.rs",
    "tests/sgp4_json_origin.rs",
    "tests/sgp4_regenerate_fixture.rs",
]

[dependencies]
nalgebra = "0.33"
thiserror = "1.0"
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
approx = "0.5"
serde_json = { version = "1", features = ["preserve_order"] }

[features]
default = ["serde"]
# Test-only oracle. Compiles Vallado C++ via cc and exposes it to the test
# suite for field-level diffing against the pure-Rust SGP4 port. Not part
# of the public API. Off by default.
sgp4-debug-oracle = []
